<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/rl_feed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:background="@drawable/shape_main_item_function">

                <ImageView
                    android:id="@+id/iv_feed_logo"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_alignParentRight="true"
                    android:src="@mipmap/ic_feed" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/iv_feed_logo"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="40dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="6dp"
                        android:layout_height="22dp"
                        android:background="#f04246" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:text="@string/feed_manage"

                        android:textColor="@color/colorBlack"
                        android:textSize="19sp" />
                </LinearLayout>


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_weight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:layout_weight="1"
                android:background="@drawable/shape_main_item_function">

                <ImageView
                    android:id="@+id/iv_weigh_logo"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_alignParentRight="true"
                    android:src="@mipmap/ic_weigh" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/iv_weigh_logo"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="40dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="6dp"
                        android:layout_height="22dp"
                        android:background="#f3a536" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:text="@string/weight_manage"

                        android:textColor="@color/colorBlack"
                        android:textSize="19sp" />
                </LinearLayout>


            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/rl_immune"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:background="@drawable/shape_main_item_function">

                <ImageView
                    android:id="@+id/iv_immune_logo"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_alignParentRight="true"
                    android:src="@mipmap/ic_immune" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/iv_immune_logo"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="40dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="6dp"
                        android:layout_height="22dp"
                        android:background="#2270ef" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:text="@string/ic_immune"
                        android:textColor="@color/colorBlack"
                        android:textSize="19sp" />
                </LinearLayout>


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_disinfect"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:layout_weight="1"
                android:background="@drawable/shape_main_item_function">

                <ImageView
                    android:id="@+id/iv_disinfect_logo"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_alignParentRight="true"
                    android:src="@mipmap/ic_disinfect" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/iv_disinfect_logo"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="40dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="6dp"
                        android:layout_height="22dp"
                        android:background="#58e2c2" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:text="@string/disinfect_manage"

                        android:textColor="@color/colorBlack"
                        android:textSize="19sp" />
                </LinearLayout>


            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/rl_diagnosis"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:background="@drawable/shape_main_item_function">

                <ImageView
                    android:id="@+id/iv_diagnosis_logo"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_alignParentRight="true"
                    android:src="@mipmap/ic_diagnosis" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/iv_diagnosis_logo"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="40dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="6dp"
                        android:layout_height="22dp"
                        android:background="#f7e53b" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:gravity="center_vertical"
                        android:text="@string/diagnosis_manage"
                        android:textColor="@color/colorBlack"
                        android:textSize="19sp" />
                </LinearLayout>


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_new_ear_tag"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:layout_weight="1"
                android:background="@drawable/shape_main_item_function">

                <ImageView
                    android:id="@+id/iv_new_tag_logo"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_alignParentRight="true"
                    android:src="@mipmap/ic_new_ear_tag" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/iv_new_tag_logo"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="40dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="6dp"
                        android:layout_height="22dp"
                        android:background="#9b9b9b" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"

                        android:text="@string/new_ear_tag"
                        android:textColor="@color/colorBlack"
                        android:textSize="19sp" />
                </LinearLayout>


            </RelativeLayout>

        </LinearLayout>


    </LinearLayout>

</ScrollView>