<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/rl_quarantine"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:background="@drawable/shape_main_item_function">

                <ImageView
                    android:id="@+id/iv_quarantine_logo"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_alignParentRight="true"
                    android:src="@mipmap/ic_quarantine" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/iv_quarantine_logo"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="40dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="6dp"
                        android:layout_height="22dp"
                        android:background="#f04246" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:text="@string/quarantine_manage"
                        android:textColor="@color/colorBlack"
                        android:textSize="19sp" />
                </LinearLayout>


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_fertilization"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:layout_weight="1"
                android:background="@drawable/shape_main_item_function">

                <ImageView
                    android:id="@+id/iv_fertilization_logo"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_alignParentRight="true"
                    android:src="@mipmap/ic_fertilization" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/iv_fertilization_logo"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="40dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="6dp"
                        android:layout_height="22dp"
                        android:background="#f3a536" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:text="@string/fertilization_manage"

                        android:textColor="@color/colorBlack"
                        android:textSize="19sp" />
                </LinearLayout>


            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/rl_innocuity_deal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:background="@drawable/shape_main_item_function">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/iv_innocuity_deal_logo"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="40dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="6dp"
                        android:layout_height="22dp"
                        android:background="#2270ef" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:text="@string/inocuity_deal"
                        android:textColor="@color/colorBlack"
                        android:textSize="19sp" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/iv_innocuity_deal_logo"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@mipmap/ic_innocuity_deal"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_offline_sale"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:layout_weight="1"
                android:background="@drawable/shape_main_item_function">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/iv_sale_offline_logo"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="40dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="6dp"
                        android:layout_height="22dp"
                        android:background="#58e2c2" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:text="@string/sale_offline"

                        android:textColor="@color/colorBlack"
                        android:textSize="19sp" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/iv_sale_offline_logo"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@mipmap/ic_sale_offline"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />


            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/rl_environment_monitor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:background="@drawable/shape_main_item_function">

                <ImageView
                    android:id="@+id/iv_environment_monitor_logo"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_alignParentRight="true"
                    android:src="@mipmap/ic_environment_monitor" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/iv_environment_monitor_logo"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="40dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="6dp"
                        android:layout_height="22dp"
                        android:background="#f7e53b" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:gravity="center_vertical"
                        android:text="@string/envior_monitor"
                        android:textColor="@color/colorBlack"
                        android:textSize="19sp" />
                </LinearLayout>


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_purchase"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:layout_weight="1"
                android:background="@drawable/shape_main_item_function">

                <ImageView
                    android:id="@+id/iv_purchase_logo"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_alignParentRight="true"
                    android:src="@mipmap/ic_purchase" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/iv_purchase_logo"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="40dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="6dp"
                        android:layout_height="22dp"
                        android:background="#9b9b9b" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"

                        android:text="@string/purchase"
                        android:textColor="@color/colorBlack"
                        android:textSize="19sp" />
                </LinearLayout>


            </RelativeLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:weightSum="2"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/rl_online"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="35dp"
                android:layout_weight="1"
                android:background="@drawable/shape_main_item_function">

                <ImageView
                    android:id="@+id/iv_online"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_alignParentRight="true"
                    android:src="@mipmap/ic_environment_monitor" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/iv_online"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="40dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="6dp"
                        android:layout_height="22dp"
                        android:background="#33e53b" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:gravity="center_vertical"
                        android:text="@string/online"
                        android:textColor="@color/colorBlack"
                        android:textSize="19sp" />
                </LinearLayout>


            </RelativeLayout>



        </LinearLayout>


    </LinearLayout>

</ScrollView>